--- a/docs/02-Frontend/01-react/01-basic-react.mdx
+++ b/docs/02-Frontend/01-react/01-basic-react.mdx
@@ -638,6 +638,16 @@ console.log(allAboveThreshold); // true
 输入时支持快捷键，好像idea中的`main`
 
 
+## 命名规范
+
+| 类型                      | 命名风格   | 示例                            |
+| ------------------------- | ---------- | ------------------------------- |
+| React 组件                | PascalCase | `GameLayout.tsx`, `App.tsx`     |
+| 路由 / 工具 / hook / 配置 | camelCase  | `gameRoutes.ts`, `useAuth.ts`   |
+| 文件夹                    | kebab-case | `layouts/`, `routes/`, `pages/` |
+
+
+
 import TailProtocal from "@site/src/components/TailProtocal";
 
 <TailProtocal />
