add SingleVideoProgress component

--- a/docs/02-Frontend/01-react/02-react-learn-2025.mdx
+++ b/docs/02-Frontend/01-react/02-react-learn-2025.mdx
@@ -42,6 +42,11 @@ After this course
   - URL params (`useParams`)
   - Navigation (`useNavigate`)
   - Nested routes, layout routes
+  
+import SingleVideoProgress from '@site/src/components/video-progress-dashdoard/SingleVideoProgress.tsx'
+import { videoReactRouter } from '@site/src/data/videos';
+
+<SingleVideoProgress video={videoReactRouter}/>
 
 **Practice**
 
