--- a/docs/02-Frontend/01-react/02-react-learn-2025.mdx
+++ b/docs/02-Frontend/01-react/02-react-learn-2025.mdx
@@ -10,12 +10,12 @@
 - [My learn GitHub](https://github.com/Halcyon666/react-daily-learn)
 
 
-import { reactLearn2025 } from '@site/src/data/videos';
+import { beginnerVideos } from '@site/src/data/reactVideos';
 import VideoProgressDashboard from '@site/src/components/video-progress-dashdoard/VideoProgressDashboard.tsx'
 
 <details>
 <summary>视频进度</summary>
-<VideoProgressDashboard videos={reactLearn2025}/>
+<VideoProgressDashboard videos={beginnerVideos}/>
 </details>
 
 :::info
@@ -46,9 +46,9 @@ After this course
   - Nested routes, layout routes
   
 import SingleVideoProgress from '@site/src/components/video-progress-dashdoard/SingleVideoProgress.tsx'
-import { videoReactRouter } from '@site/src/data/videos';
+import { routerVideo } from '@site/src/data/reactVideos';
 
-<SingleVideoProgress video={videoReactRouter}/>
+<SingleVideoProgress video={routerVideo}/>
 
 **Practice**
 
