--- a/docs/02-Frontend/01-react/02-react-learn-2025.mdx
+++ b/docs/02-Frontend/01-react/02-react-learn-2025.mdx
@@ -43,16 +43,15 @@ After this course
   - `<BrowserRouter>` / `<Routes>` / `<Route>`
   - URL params (`useParams`)
   - Navigation (`useNavigate`)
-  - Nested routes, layout routes
+  - Nested routes, layout routes(json and xml reusable routes)
+  - useLocation
+  - useSearchParams
   
 import SingleVideoProgress from '@site/src/components/video-progress-dashdoard/SingleVideoProgress.tsx'
 import { routerVideo } from '@site/src/data/reactVideos';
 
 <SingleVideoProgress video={routerVideo}/>
 
-**Practice**
-
-[Practice](https://github.com/Halcyon666/react-daily-learn/commit/7188f52c8b3ade3775f8617d1bf1c41b37772de5)
 
 ------
 
