--- a/docs/02-Frontend/01-react/02-react-learn-2025.mdx
+++ b/docs/02-Frontend/01-react/02-react-learn-2025.mdx
@@ -67,7 +67,12 @@ You can learn either:
 
 **Learn**
 
-- 📺 [Redux Toolkit Crash Course — Traversy Media](https://www.youtube.com/watch?v=9zySeP5vH9c)
+
+import { reduxVideo } from '@site/src/data/reactVideos';
+
+<SingleVideoProgress video={reduxVideo}/>
+
+- 📺 [React Redux Full Course for Beginners | Redux Toolkit Complete Tutorial](https://www.youtube.com/watch?v=NqzdVN2tyvQ&t=8s)
 - Optional: [Zustand in 15 Minutes — Web Dev Simplified](https://www.youtube.com/watch?v=2hR-uWjBAgw)
 
 **Practice**
