--- a/docs/02-Frontend/01-react/01-basic-react.mdx
+++ b/docs/02-Frontend/01-react/01-basic-react.mdx
@@ -661,6 +661,39 @@ export default function GameRoutes() {
   );
 }
 ```
+
+```tsx title="App.tsx"
+import { Link, Route, Routes } from "react-router-dom";
+import NotFoundPage from "../other-function/NotFoundPage";
+import GameRoutes from "./GameRoutes";
+import GamesHome from "./GamesHome";
+
+export default function App() {
+  return (
+    <>
+      <nav
+        style={{
+          display: "flex",
+          flexDirection: "column",
+        }}
+      >
+        {/* if using replace here, backward will be two pages instead of one page */}
+        <Link to="/" replace>
+          home
+        </Link>
+        <Link to="/games">games</Link>
+      </nav>
+      <Routes>
+        <Route path="/" element={<GamesHome />}></Route>
+        {/* must "/*"" after "/games" */}
+        // highlight-next-line
+        <Route path="/games/*" element={<GameRoutes />}></Route>
+        <Route path="*" element={<NotFoundPage />}></Route>
+      </Routes>
+    </>
+  );
+}
+```
 </details>
 
 [All Json codes](https://github.com/Halcyon666/react-daily-learn/tree/main/src/routes/v4)
@@ -696,6 +729,38 @@ const gameRoutes: RouteObject = {
 };
 
 export default gameRoutes;
+```
+
+```tsx title="routes.tsx"
+import type { RouteObject } from "react-router-dom";
+
+import gameRoutes from "./gameRoutes";
+
+// equivalent to <Routes>...</Routes>
+export const routes: RouteObject[] = [
+  {
+    path: "/",
+    element: <h1>home</h1>,
+  },
+  {
+    path: "/games",
+    // nested layout links here, need Layout inside of it.
+    /* element: <GameLayout />,
+    children: [
+      { index: true, element: <h1>games</h1> },
+      { path: ":id", element: <GameItem /> },
+      { path: "search", element: <h1>games search</h1> },
+    ], */
+    // reuse code from gameRoutes
+    // highlight-next-line
+    ...gameRoutes,
+  },
+  {
+    path: "/games1",
+    // highlight-next-line
+    ...gameRoutes,
+  },
+];
 ```
 </details>
 
