docs update, and remove course tracker

--- a/docs/02-Frontend/98-docusaurus.mdx
+++ b/docs/02-Frontend/98-docusaurus.mdx
@@ -1,4 +1,4 @@
-# Docusaurus
+# Deploy stuff
 
 ## github workflow configuration
 
@@ -170,6 +170,10 @@ searchParameters: {
 单独导入组件，不使用全局导入。
 
 修复commit[记录](https://github.com/Halcyon666/summary/commit/00b6ea74b68b586919e0a2c41a67ef0037defe7b)
+
+
+## 使用FireStore database
+
 
 
 import TailProtocal from "@site/src/components/TailProtocal";
