--- a/docs/02-Frontend/01-react/02-react-learn-2025.mdx
+++ b/docs/02-Frontend/01-react/02-react-learn-2025.mdx
@@ -1,6 +1,8 @@
 
 # Becomes React Developer
 
+[course-tracker](https://course-tracker-three.vercel.app/)
+
 ## Full Beginner’s Tutorial
 
 资源列表
@@ -8,15 +10,6 @@
 - [Learn React JS - Full Beginner’s Tutorial & Practice Projects](https://www.youtube.com/watch?v=x4rFhThSX04&t=4448s)
 - [Author's case GitHub](https://github.com/scrimba/learn-react)
 - [My learn GitHub](https://github.com/Halcyon666/react-daily-learn)
-
-
-import { beginnerVideos } from '@site/src/data/reactVideos';
-import VideoProgressDashboard from '@site/src/components/video-progress-dashdoard/VideoProgressDashboard.tsx'
-
-<details>
-<summary>视频进度</summary>
-<VideoProgressDashboard videos={beginnerVideos}/>
-</details>
 
 :::info
 After this course
@@ -46,11 +39,6 @@ After this course
   - Nested routes, layout routes(json and xml reusable routes)
   - useLocation
   - useSearchParams
-  
-import SingleVideoProgress from '@site/src/components/video-progress-dashdoard/SingleVideoProgress.tsx'
-import { routerVideo } from '@site/src/data/reactVideos';
-
-<SingleVideoProgress video={routerVideo}/>
 
 
 ------
@@ -67,10 +55,6 @@ You can learn either:
 
 **Learn**
 
-
-import { reduxVideo } from '@site/src/data/reactVideos';
-
-<SingleVideoProgress video={reduxVideo}/>
 
 - 📺 [React Redux Full Course for Beginners | Redux Toolkit Complete Tutorial](https://www.youtube.com/watch?v=NqzdVN2tyvQ&t=8s)
 - Optional: [Zustand in 15 Minutes — Web Dev Simplified](https://www.youtube.com/watch?v=2hR-uWjBAgw)
@@ -110,7 +94,6 @@ import { reduxVideo } from '@site/src/data/reactVideos';
 
 **Learn**
 
-- 📺 [CSS Modules in React — Web Dev Simplified (15m)](https://www.youtube.com/watch?v=6v2L2UGZJAM)
 - 📺 [Tailwind CSS Crash Course — Traversy Media (1h)](https://www.youtube.com/watch?v=dFgzHOx84xQ)
 
 **Practice**
