--- a/docs/02-Frontend/03-styling/02-tailwind.mdx
+++ b/docs/02-Frontend/03-styling/02-tailwind.mdx
@@ -39,7 +39,7 @@ Also you can skip all steps above, just execute the following command,
 pnpm add -D tailwindcss postcss @tailwindcss/postcss
 ```
 
-| 包名                       | 作用                             |
+| package name             |     function           |
 | ------------------------ | ------------------------------ |
 | **tailwindcss**          | Tailwind core      |
 | **postcss**              | CSS compiler, used to run Tailwind         |
@@ -66,7 +66,7 @@ export default {
 } */
 ```
 
-[example commit](https://github.com/Halcyon666/react-daily-learn/commit/419fe06cb1b05244e1dbd7e1927ba08e397b4a5f)
+[example commit](https://github.com/Halcyon666/react-daily-learn/commit/782abb369a624a792802b8fd6702b4614ce81bd7)
 
 ### Tailwind Usage
 
