--- a/docs/01-background/01-Java/05-problem-summary/06-Junit-Stuff.mdx
+++ b/docs/01-background/01-Java/05-problem-summary/06-Junit-Stuff.mdx
@@ -197,7 +197,7 @@ class StaticMockTest {
 
 1. [System out 重定向](https://github.com/Halcyon666/learn-cases/blob/2e543cf044a8e67a0ae1cbde5fe3ab8aa5b1637e/learncases/src/test/java/com/whalefall/override/TestClassTest.java#L48)
 
-2. LogCaptor (Recommendation)
+2. LogCaptor (并发执行场景问题)
 
 ```java title="MyServiceTest "
 import org.junit.jupiter.api.Test;
