--- a/docs/01-background/03-Middleware/02-Redis.mdx
+++ b/docs/01-background/03-Middleware/02-Redis.mdx
@@ -17,7 +17,7 @@
 
 - `blockWhenExhausted = false`：连接池耗尽时直接抛出异常，避免线程阻塞。若设置为true，需保证`maxIdle`大于0。
 - 连接数`maxTotal`和`maxIdle`建议设置为同一数量级，推荐最大连接数4096。
-- 建议使用`jedis`作为客户端，因其支持拓扑刷新、`xreadgroup`等功能，且基于Netty异步实现，长连接可复用。
+- 建议使用`jedis`作为客户端，因其支持拓扑刷新、`xreadgroup`等功能，且基于`Netty`异步实现，长连接可复用。
 - 合理设置超时时间：建立连接时间建议1000-5000毫秒；单次操作时间建议1000-5000毫秒。
 - 高可用部署建议：
     - 单实例哨兵模式：一主二从，三哨兵，跨两个机房，三台物理机。
