--- a/docs/01-background/01-Java/01-JavaBase/05-netty.mdx
+++ b/docs/01-background/01-Java/01-JavaBase/05-netty.mdx
@@ -35,6 +35,15 @@ While **your order may work in some cases**, it is **unsafe and not recommended*
 5. Routing: Netty 收到响应，查表 Map.get("1001")，找到了 Client_Channel_A。
 6. Reply: 通过 Client_Channel_A 把结果写回给 Client。
 
+
+
+## Java属性类型对netty影响
+
+问题:代码优化时，原始类型改成包装类型时，如果是Spring 注入的方式，注意默认值会有变化，boolean默认值为false，<br/>
+包装类为null，可能会造成空指针异常。<br/>
+boolean 改为Boolean值，某些场景(netty 不响应请求)会有问题。<br/>
+处理：给Boolean类赋值false
+
 import TailProtocal from "@site/src/components/TailProtocal";
 
 <TailProtocal />
