--- a/docs/05-ai-bigdata/05-ai-roadmap.mdx
+++ b/docs/05-ai-bigdata/05-ai-roadmap.mdx
@@ -1,4 +1,4 @@
-# AI RoadMap v2.0：PyTorch & SLM 实战增强版
+# AI RoadMap v2.0：PyTorch & SLM 
 
 **基于目标岗位要求的实战导向学习计划**
 
@@ -37,9 +37,9 @@ v2.0 升级目标：
 
 你已经有编程基础，重点是 快速掌握 Python AI 生态的惯用法，不要用写 Java 的思维写 Python。
 
-- **Pandas**：重点掌握 `DataFrame` 的清洗、转换、分组聚合（对标 Java Stream API）。
-- **NumPy**：重点掌握向量化计算、广播机制（Broadcasting），这是理解 AI 矩阵运算的基础。
-- **Jupyter Notebook**：熟练使用这种交互式开发环境进行数据探索。
+- ✅ **Pandas**：重点掌握 `DataFrame` 的清洗、转换、分组聚合（对标 Java Stream API）。
+- ✅ **NumPy**：重点掌握向量化计算、广播机制（Broadcasting），这是理解 AI 矩阵运算的基础。
+- ✅ **Jupyter Notebook**：熟练使用这种交互式开发环境进行数据探索。
 - PyTorch 基础（后 1.5 周）—— [新增核心]
 
 不要去学“如何从零写一个 CNN”，重点学 “如何使用 PyTorch 操作数据和加载模型”。
