--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -169,8 +169,21 @@ public class HelloWorld {
 
 ### 数学公式
 
+[Home Documentation](https://www.latex-project.org/help/documentation/)
+
+[LaTeX Syntax Documentation](https://www.latex-project.org/help/documentation/amsldoc.pdf)
+
 这是行内公式 $E=mc^2$。
 
 $$
 I = \int_0^{2\pi} \sin(x)\,dx
+$$
+
+$$
+A^{-1} = \frac{1}{ad - bc}
+\begin{bmatrix}
+d & -b \\
+-c & a
+\end{bmatrix}
+
 $$
