Revise AI RoadMap qualifications and focus areas
Removed outdated qualifications and focused on the core pain points in AI application development.

--- a/docs/05-ai-bigdata/05-ai-roadmap.mdx
+++ b/docs/05-ai-bigdata/05-ai-roadmap.mdx
@@ -2,11 +2,8 @@
 
 **基于目标岗位要求的实战导向学习计划**
 
+[国内模型下载地址](https://modelscope.cn/models/LLM-Research/Phi-3.5-mini-instruct/files)
 ## 🎯 你的技术优势诊断
-
-- ✅ **5年 Java 开发经验 + React/Vue 前端能力**：具备构建复杂企业级应用的工程底座。
-- ✅ **Docker 容器化经验**：为 AI 模型的私有化部署和微服务化提供了基础。
-- ✅ **LangChain + Ollama 经验**：已经跨过了 AI 应用开发的入门门槛。
 
 v2.0 升级目标：
 
