--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -32,7 +32,20 @@
 
 ## 05-ai-bigdata
 AI 与大数据相关内容：
-- Flink、Hadoop、HBase、AI 公式。
+- **核心架构**：Dify 企业级应用开发、LangGraph/PyTorch 底层实现
+- **技术栈**：
+  - 平台工具：Dify, Ollama, MCP (Model Context Protocol)
+  - 核心框架：PyTorch, LangGraph, VectorDB
+  - 基础设施：Milvus, Neo4j, Docker
+- **学习路线**：
+  - 阶段一：环境与基础 (Ollama, MCP, Python 数据栈)
+  - 阶段二：RAG 应用开发 (Dify 实战/手写 RAG 链路)
+  - 阶段三：Agent 架构 (LangGraph, 知识图谱)
+  - 阶段四：全栈落地与微调 (React 集成, 模型微调)
+- **特色内容**：
+  - AI 工具驱动开发方法论
+  - 复杂系统架构设计
+  - 面试突击清单与项目经验
 
 ## 06-misc
 其他内容，包括读书笔记、资源链接等：
@@ -185,5 +198,4 @@ A^{-1} = \frac{1}{ad - bc}
 d & -b \\
 -c & a
 \end{bmatrix}
-
 $$
