--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -5,64 +5,7 @@ sidebar_position: 1
 description: "Overview of the documentation structure and contents"
 ---
 
-# introduction
-
-本项目包含以下主要分类和子目录：
-
-## 01-background
-后端相关内容，包括 Java 基础、Spring、并发与 JVM、数据库、中间件等：
-- **01-Java**: Java 基础、Spring、面试题、并发与 JVM、问题总结、设计模式。
-- **02-DateBase**: Oracle、MySQL、事务处理、分布式案例、MyBatis-Plus 快速入门与代码生成。
-- **03-Middleware**: Kafka、Redis、RabbitMQ、Camunda。
-- **04-Python**: Python 问题与脚本。
-- **06-algorithm**: 排序算法、二分插入、KMP、LeetCode 题解等。
-
-## 02-frontend
-前端相关内容，包括 React、Vue、CSS、工具等：
-- **01-react**: React 学习笔记。
-- **02-vue**: Vue 语法、项目笔记、路由、Vue3 入门。
-- **03-styling**: CSS 基础、Tailwind。
-- **04-tools**: pnpm、Husky、Prettier 等工具集成。
-- **05-jquery**: jQuery 相关内容。
-- **06-cases**: 前端案例，如拖拽容器移动。
-
-## 03-devops
-运维与容器相关内容，包括 Linux、Docker、Kubernetes：
-- **01-Linux**: 常用 Shell 命令、AWK/SED 快速入门。
-- **02-docker**: Docker 镜像地址、命令与 Dockerfile、Redis 集群与 Jenkins 配置。
-- **03-kubernetes**: CentOS8 安装 Kubernetes、常用命令。
-
-## 04-tools
-开发与非开发工具相关内容：
-- **01-develop**: Git 命令、Gradle/Maven 配置、开发软件技巧。
-- **02-non-develop**: Everything 工具、正则表达式、非开发软件技巧。
-
-## 05-ai-bigdata
-AI 与大数据相关内容：
-- **核心架构**：Dify 企业级应用开发、LangGraph/PyTorch 底层实现
-- **技术栈**：
-  - 平台工具：Dify, Ollama, MCP (Model Context Protocol)
-  - 核心框架：PyTorch, LangGraph, VectorDB
-  - 基础设施：Milvus, Neo4j, Docker
-- **学习路线**：
-  - 阶段一：环境与基础 (Ollama, MCP, Python 数据栈)
-  - 阶段二：RAG 应用开发 (Dify 实战/手写 RAG 链路)
-  - 阶段三：Agent 架构 (LangGraph, 知识图谱)
-  - 阶段四：全栈落地与微调 (React 集成, 模型微调)
-- **特色内容**：
-  - AI 工具驱动开发方法论
-  - 复杂系统架构设计
-  - 面试突击清单与项目经验
-
-## 06-misc
-其他内容，包括读书笔记、资源链接等：
-- **01-ReadBook**: 计算机理论、文学相关读书笔记。
-- **02-CollectLinks**: 收集的资源链接。
-- **03-Others**: 其他内容。
-
----
-
-以上目录结构旨在帮助快速定位内容，便于后续扩展与维护。
+# Introduction
 
 ## 博客支持用法
 
