docs: Add AI/Big Data career guide.

--- a/docs/ai-bigdata/AI/AI-formula.mdx
+++ b/docs/ai-bigdata/AI/AI-formula.mdx
@@ -1,3 +1,10 @@
+---
+title: "AI Formula"
+sidebar_label: "AI Formula"
+sidebar_position: 7
+description: "AI Formula"
+---
+
 # AI Formula
 
 ## 基本概念
