--- a/docs/ai-bigdata/AI/ai-problems.mdx
+++ b/docs/ai-bigdata/AI/ai-problems.mdx
@@ -1,3 +1,10 @@
+---
+title: "AI Problems"
+sidebar_label: "AI Problems"
+sidebar_position: 6
+description: "AI Problems"
+---
+
 # AI Problems
 
 ## ollama本地调用问题
