--- a/docs/ai-bigdata/AI/maxi-model-capacity.mdx
+++ b/docs/ai-bigdata/AI/maxi-model-capacity.mdx
@@ -1,3 +1,10 @@
+---
+title: "Agent 智能体设计完整指南"
+sidebar_label: "Agent智能体设计完整指南"
+sidebar_position: 4
+description: "基于 ReAct 的 Agent 智能体设计完整指南"
+---
+
 # 基于 ReAct 的 Agent 智能体设计完整指南
 
 ## 📋 方案概述
