feat: introduce Docusaurus DocCardList component and remove PowerShell markdown utility scripts.

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Introduction"
-sidebar_label: "📚 Introduction"
+sidebar_label: "Introduction"
 sidebar_position: 1
 description: "Overview of the documentation structure and contents"
 ---
